module(name = "iso14229")
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
)

http_archive(
    name = "cmocka",
    url = "https://cmocka.org/files/1.1/cmocka-1.1.7.tar.xz",
    sha256 = "810570eb0b8d64804331f82b29ff47c790ce9cd6b163e98d47a4807047ecad82",
    build_file = "//test:cmocka.BUILD",
    strip_prefix = "cmocka-1.1.7",
)

http_archive(
    name = "s32k_sdk",
    url = "https://www.keil.com/pack/Keil.S32_SDK_DFP.1.5.0.pack",
    sha256 = "95f7649aee66deb656cc999f300663544113245aecd407cfc90548377355353b",
    type = "zip",
    build_file = "//platforms:s32k_sdk.BUILD",
)

http_archive(
    name = "CMSIS",
    build_file = "//platforms:cmsis.BUILD",
    sha256 = "14b366f2821ee5d32f0d3bf48ef9657ca45347261d0531263580848e9d36f8f4",
    urls = ["http://www.keil.com/pack/ARM.CMSIS.5.9.0.pack"],
    type = ".zip",
)

# https://github.com/bazelbuild/bazel/issues/18616
http_archive(
    name = "rules_cc",
    urls = ["https://github.com/bazelbuild/rules_cc/releases/download/0.0.17/rules_cc-0.0.17.tar.gz"],
    sha256 = "abc605dd850f813bb37004b77db20106a19311a96b2da1c92b789da529d28fe1",
    strip_prefix = "rules_cc-0.0.17",
)

bazel_dep(name = "platforms", version="1.0.0")

bazel_dep(name = "toolchains_llvm", version = "1.4.0")

# Chromium sysroot (Debian Bullseye) - includes isotp headers
http_archive(
    name = "org_chromium_sysroot_linux_x64",
    build_file_content = """
filegroup(
  name = "sysroot",
  srcs = glob(["*/**"], exclude=["**/*\\\\*"]),
  visibility = ["//visibility:public"],
)
""",
    sha256 = "36a164623d03f525e3dfb783a5e9b8a00e98e1ddd2b5cff4e449bd016dd27e50",
    urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/36a164623d03f525e3dfb783a5e9b8a00e98e1ddd2b5cff4e449bd016dd27e50"],
    type = "tar.xz",
)




# Configure and register the toolchain.
git_override(
  module_name = "toolchains_llvm",
  commit = "d103be73bce9a804ebc4e57637fbaf9d6f23e682",
  remote = "https://github.com/bazel-contrib/toolchains_llvm",
)
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name="llvm_toolchain",
    llvm_version = "16.0.0",
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@org_chromium_sysroot_linux_x64//:sysroot",
    targets = ["linux-x86_64"],
)
use_repo(llvm, "llvm_toolchain")
# register_toolchains("@llvm_toolchain//:all")

llvm.toolchain(
    name="llvm_toolchain_nonhermetic",
    llvm_version = "16.0.0",
)
use_repo(llvm, "llvm_toolchain_nonhermetic")
# register_toolchains("@llvm_toolchain_nonhermetic//:all")

bazel_dep(name = "rules_fuzzing", version = "0.6.0")

